K8S/pgsql-plat-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgsql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgsql
  template:
    metadata:
      labels:
        app: pgsql
    spec:
      containers:
        - name: pgsql
          image: postgres:17
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgsqldb
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: pgsqldb
          persistentVolumeClaim:
            claimName: pgsql-claim
---
apiVersion: v1
kind: Service
metadata:
  name: pgsql-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: pgsql
  ports:
    - name: pgsql
      protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: pgsql-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: pgsql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
