K8S/pgsql-todo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgsql-todo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgsqltodo
  template:
    metadata:
      labels:
        app: pgsqltodo
    spec:
      containers:
        - name: pgsqltodo
          image: postgres:17
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgsqldb
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: pgsqldb
          persistentVolumeClaim:
            claimName: pgsql-todo-claim
---
apiVersion: v1
kind: Service
metadata:
  name: pgsqltodo-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: pgsqltodo
  ports:
    - name: pgsqltodo
      protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: pgsqltodo-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: pgsqltodo
  ports:
    - protocol: TCP
      port: 5433
      targetPort: 5432
