K8S/pgsql-todo-type-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgsql-todo-type-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgsqltodotype
  template:
    metadata:
      labels:
        app: pgsqltodotype
    spec:
      containers:
        - name: pgsqltodotype
          image: postgres:17
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgsqldb
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: pgsqldb
          persistentVolumeClaim:
            claimName: pgsql-todo-type-claim
---
apiVersion: v1
kind: Service
metadata:
  name: pgsqltodotype-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: pgsqltodotype
  ports:
    - name: pgsqltodotype
      protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: pgsqltodotype-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: pgsqltodotype
  ports:
    - protocol: TCP
      port: 5434
      targetPort: 5432
