K8S/pgsql-user-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgsql-user-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgsqluser
  template:
    metadata:
      labels:
        app: pgsqluser
    spec:
      containers:
        - name: pgsqluser
          image: postgres:17
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgsqldb
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: pgsqldb
          persistentVolumeClaim:
            claimName: pgsql-user-claim
---
apiVersion: v1
kind: Service
metadata:
  name: pgsqluser-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: pgsqluser
  ports:
    - name: pgsqluser
      protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: pgsqluser-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: pgsqluser
  ports:
    - protocol: TCP
      port: 5435
      targetPort: 5432
