K8S/todo-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoservice-srv
spec:
  type: NodePort
  selector:
    app: todoservice
  ports:
    - name: todoservice
      protocol: TCP
      port: 8080
      targetPort: 8080
