K8S/todo-type-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-type-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todotypeservice
  template:
    metadata:
      labels:
        app: todotypeservice
    spec:
      containers:
        - name: todotypeservice
          image: tonitrus/todotypeservice:0.5
---
apiVersion: v1
kind: Service
metadata:
  name: todo-type-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: todotypeservice
  ports:
    - name: todotypeservice
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: todotypegrps
      protocol: TCP
      port: 666
      targetPort: 666
