K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: microtest.com
      http:
        paths:
          - path: /api/todo-types
            pathType: Prefix
            backend:
              service:
                name: todo-type-clusterip-srv
                port:
                  number: 8080
